CPU上下文切换

--- a/_posts/Linux/2019-04-06-CPU上下文切换.md
+++ b/_posts/Linux/2019-04-06-CPU上下文切换.md
@@ -7,3 +7,38 @@ tags: ['linux']
 category: Linux
 ---
 
+# CPU上下文切换 ?
+
+多个进程竞争CPU可以导致平均负载(Load Average) 升高, 竞争CPU的时候没有真正的运行,在竞争过程发生的**CPU上下文切换**导致的. 
+
+
+
+### 为什么会存在CPU上下文切换 ?
+
+Linux系统为多任务系统, 但是CPU在执行任务时,某个时刻只能执行一个任务. 所以操作系统将CPU轮流执行多个任务,执行的任务在CPU快速的切换造成同时执行多个任务的假象. 在切换任务后,执行任务前,CPU需要知道执行任务的从哪里加载, 从哪里开始运行, 所以需要 系统提前设置好**CPU寄存器和程序计数器(Program Counter, PC)** 
+
+
+
++ CPU寄存器: CPU内置的小容量但是速度极快的内存
++ 程序计数器 : 用来存储CPU正在执行的CPU指令的位置, 或者下一条指令的位置. 
+
+它们是CPU执行任务的必须的依赖环境, 叫做**CPU的上下文**. 
+
+
+
+
+
+
+
+![CPU上下文切换](../../image/Linux/image-20181202122328329.png)
+
+
+
+## 什么是CPU上下文切换
+
+## 进程上下文切换
+
+## 线程上下文切换
+
+## 中断上下文切换
+
