--- a/_posts/d2l/2019-07-13-卷积神经网络.md
+++ b/_posts/d2l/2019-07-13-卷积神经网络.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: lose function
+toc: true
+cover: /img/cover/why-is-binary.png
+tags: []
+category: d2l
+---
 # 卷积神经网络
 
 ## 1.二维卷积层
