--- a/_posts/d2l/2019-07-13-卷积神经网络.md
+++ b/_posts/d2l/2019-07-13-卷积神经网络.md
@@ -1,10 +1,11 @@
-# 
+---
 layout: post
 title: 卷积神经网络
 toc: true
 cover: /img/cover/why-is-binary.png
 tags: []
 category: d2l
+---
 
 # 卷积神经网络
 
@@ -362,9 +363,7 @@ conv2d = nn.Conv2D(1, kernel_size=(3, 5), padding=(0, 1), strides=(3, 4))
 Y = comp_conv2d(conv2d, X)
 print(Y.shape)
 ```
-
 输出:
-
 ```
 (2, 2)
 ```
@@ -385,7 +384,152 @@ print(Y.shape)
 
 
 
-### 1. 多输入通道
+### 3.1 多输入通道
+
+当输入数据是是多通道时, 需要构建一个和输入数据通道数相同的卷积核 .
+
+输入通道数为$c_i$, 则卷积核的输输入通道数同样为$c_i$ . 
+
+设卷积核窗口形状为$k_w \times k_h$
+
+- 当$c_i = 1$时, 卷积核为形状为$k_w \times k_h$的二维数组
+- 当$c_i > 1$时, 卷积核为形状是$c_i \times k_w \times k_h$ 
+
+
+
+**互相关运算:**
+
+由于输入和卷积核都有$c_i$个通道, 将各个通道上的二维数组和卷积核的二维数组做互相关运算,再将$c_i$个互相关运算的二维输出通道相加,得到一个二维数组.  
+
+![image-20190715004729925](image/image-20190715004729925.png)
+
+
+
+图5.4中包含了2个输入通道的二维互相关运行,图中阴影部分的计算为:
+$$
+(1 \times 1 + 2 \times 2 + 4 \times 3 + 5 \times 4 ) + (0\times0 + 1 \times 1 + 3 \times 2 + 4 \times 3 ) = 56
+$$
+
+
+**代码实例:**
+
+```python
+def corr2d_multi_in(X, K):
+    # 首先验证X和K的第0维(通道维)遍历,
+    # 然后使用*将结果列表转换成add_n函数的位置参数
+    #
+    return nd.add_n(*[corr2d(x, k) for x, k in zip(X, K)])
+
+
+if __name__ == '__main__':
+    X = nd.array([[[0, 1, 2], [3, 4, 5], [6, 7, 8]],
+                  [[1, 2, 3], [4, 5, 6], [7, 8, 9]]])
+    K = nd.array([[[0, 1], [2, 3]], [[1, 2], [3, 4]]])
+    Y = corr2d_multi_in(X, K)
+    print(Y)
+```
+
+输出:
+
+```
+[[ 56.  72.]
+ [104. 120.]]
+```
+
+
+
+### 3.2 多输出通道
+
+
+
+当输入通道数有多个时, 由于输出时对各个通道的结果做了累加, 所有无论输入通道数是多少, 输出通道数总为1.  如果希望是多通道输出,  可以为**每个输出通道**分别创建$c_i \times k_h \times k_w$的核数组,  则卷积核的形状为: $c_o \times c_i \times k_h \times k_w$, 在做互相关运算时, 将每个输出通道上的结果由关键核在改输出通道上的核数组,与整个数组计算而来. 
+
+
+
+**代码实现:**
+
+```python
+def corred_multi_in_out(X, K):
+    # 对k的第0维变量, 每次输入X做互相关运算, 将结果使用stack函数合并在一起
+    return nd.stack(*[corr2d_multi_in(X, k) for k in K])
+
+if __name__ == '__main__':
+    X = nd.array([[[0, 1, 2], [3, 4, 5], [6, 7, 8]],
+                  [[1, 2, 3], [4, 5, 6], [7, 8, 9]]])
+
+    K = nd.array([[[0, 1], [2, 3]], [[1, 2], [3, 4]]])
+    K = nd.stack(K, K + 1, K + 2)
+    print(K.shape)
+    Y = corred_multi_in_out(X, K)
+    print(Y.shape)
+```
+
+
+
+**输出:**
+
+```
+(3, 2, 2, 2)
+(3, 2, 2)
+```
+
+
+
+### 3.3 1x1卷积层
+
+卷积窗口形状为$1 \times 1(k_h = k_w = 1)$的多通道卷积层,称为$1\times1$卷积层, 将卷积运算称为$1\times1$卷积. 
+
+由于使用了 $1\times1$窗口, 导致卷积层失去了可以识别高和宽纬度上相邻元素构成的模式的功能. 所以 1x卷积的主要计算发生在通道维上. 
+
+
+
+
+
+
+
+## 4. 池化层
+
+
+
+### 4.1 二维最大池化层
+
+
+
+### 4.2 填充和步幅
+
+
+
+### 4.3 多通道
+
+
+
+## 5. 卷积神经网络(LeNet)
+
+## 6. 深度卷积神经网络(AlexNet)
+
+## 7 . 使用重复元素的网络(VGG)
+
+## 8. 网络中的网络(NiN)
+
+
+
+## 9. 含并行连接神经网络(GoogleNet)
+
+
+
+## 10. 批量归一化
+
+
+
+## 11. 残差网络(ResNet)
+
+
+
+## 12. 稠密连接网络(DenseNet)
+
+
+
+
 
 
 
