卷积神经网络

--- a/_posts/d2l/2019-07-13-卷积神经网络.md
+++ b/_posts/d2l/2019-07-13-卷积神经网络.md
@@ -477,13 +477,53 @@ if __name__ == '__main__':
 
 ### 3.3 1x1卷积层
 
+
+
 卷积窗口形状为$1 \times 1(k_h = k_w = 1)$的多通道卷积层,称为$1\times1$卷积层, 将卷积运算称为$1\times1$卷积. 
 
 由于使用了 $1\times1$窗口, 导致卷积层失去了可以识别高和宽纬度上相邻元素构成的模式的功能. 所以 1x卷积的主要计算发生在通道维上. 
 
 
 
+![image-20190718011925699](image/image-20190718011925699.png)
 
+
+
+图5.5展示了使用通道数为3, 输出通道数为2的$1 \times 1$的卷积核的互相关计算. 输入和输出局有相同的宽和高, 输出中的每个元素来之输入中高和宽**相同位置元素在不同通道之间按照权重累加* * . 
+
+**假设将通道维作为特征维, 将高和宽上的元素当成数据样本, 那么$1 \times 1$ 卷积成的左右与全连接层等价.**
+
+
+
+代码实现:
+
+```python
+def corr2d_multi_in_out_1x1(X, K):
+    c_i, h, w = X.shape
+    c_o = K.shape[0]
+    X = X.reshape((c_i, h * w))
+    K = K.reshape((c_o, c_i))
+    Y = nd.dot(K, X)  # 全连接层的矩阵乘法
+    return Y.reshape((c_o, h, w))
+
+
+if __name__ == '__main__':
+    X = nd.random.uniform(shape=(3, 3, 3))
+    K = nd.random.uniform(shape=(2, 3, 1, 1))
+
+    Y1 = corr2d_multi_in_out_1x1(X, K)
+    Y2 = corr2d_multi_in_out(X, K)
+
+    print((Y1 - Y2).norm().asscalar() < 1e-6)
+```
+
+
+
+输出:
+
+```
+True
+```
 
 
 
@@ -491,7 +531,17 @@ if __name__ == '__main__':
 
 
 
+在 **二维卷积层**里,构造卷积核从而精准的找到了像素的位置,  设任意二维数组X的的i行j列的元素为$X[i, j]$
+
+如果够着的卷积核输出$Y[i,j] = 1$, 书面输入中$X[i,j]$, 和$X[i,j+1]$的数值不一样. , 表示委托的边缘通过两个元素之间,  在时间图像中, 物体不会总出现在固定的位置, 联系拍摄的用一个物体极有可能出现像素位置的偏移, 这会导致,**通一个边缘对应的输出可能出现在卷积输出Y的不同的位置**,对后面的模式识别造成不便,  **池化层(pooling),的提出是为了缓解卷积层对位置的过度敏感性.**
+
+
+
+
+
 ### 4.1 二维最大池化层
+
+
 
 
 
