--- a/_posts/d2l/2019-07-13-卷积神经网络.md
+++ b/_posts/d2l/2019-07-13-卷积神经网络.md
@@ -17,7 +17,7 @@ category: d2l
 
 相互关系(cross-corrlelation)运算: 一个二维数组和一个二维核(kernel) 数组通过互相关系运算输出一个二维数组
 
-
+
 
 ![image-20190713152858162](image-20190713152858162.png)
 
@@ -489,7 +489,7 @@ if __name__ == '__main__':
 
 
 
-图5.5展示了使用通道数为3, 输出通道数为2的$1 \times 1$的卷积核的互相关计算. 输入和输出局有相同的宽和高, 输出中的每个元素来之输入中高和宽**相同位置元素在不同通道之间按照权重累加* * . 
+图5.5展示了使用通道数为3, 输出通道数为2的$1 \times 1$的卷积核的互相关计算. 输入和输出局有相同的宽和高, 输出中的每个元素来之输入中高和宽**相同位置元素在不同通道之间按照权重累加* **.
 
 **假设将通道维作为特征维, 将高和宽上的元素当成数据样本, 那么$1 \times 1$ 卷积成的左右与全连接层等价.**
 
@@ -535,11 +535,11 @@ True
 
 如果够着的卷积核输出$Y[i,j] = 1$, 书面输入中$X[i,j]$, 和$X[i,j+1]$的数值不一样. , 表示委托的边缘通过两个元素之间,  在时间图像中, 物体不会总出现在固定的位置, 联系拍摄的用一个物体极有可能出现像素位置的偏移, 这会导致,**通一个边缘对应的输出可能出现在卷积输出Y的不同的位置**,对后面的模式识别造成不便,  **池化层(pooling),的提出是为了缓解卷积层对位置的过度敏感性.**
 
-
-
-
-
 ### 4.1 二维最大池化层
+
+池化层对每次输入的一个**固定形状窗口**的元素计算输出,  池化层直接计算池化窗口的最大值或者平均值.  运算称为:最大池化或者平均池化, 在二维最大池化中, 池化窗口从输入数组的最左上方开始, 按照 **从左往右, 从上往下的顺序** 依次在输入数组上滑动, 当池化窗口滑动到某一位置时, 窗口输入子数组的最大值即为输出数组中相应位置上的元素. 
+
+
 
 
 
