卷积神经网络

--- a/_posts/d2l/2019-07-13-卷积神经网络.md
+++ b/_posts/d2l/2019-07-13-卷积神经网络.md
@@ -203,7 +203,7 @@ batch : 10, loss: 0.004
 
 
 
-![image-20190713152858162](image-20190713152858162.png)
+![image-20190713152858162](./image/image-20190713152858162.png)
 
 在图5.1中 输入中阴影部分的四个元素是输出中阴影部分元素的感受野.  
 
@@ -217,7 +217,7 @@ batch : 10, loss: 0.004
 
 
 
-##2. 填充和步幅
+## 2. 填充和步幅
 
 使用高和宽为3的输入和高和宽为2的卷积核得到高和宽2的输出.  假设 输入的形状为 $n_h \times n_w$ 卷积和的窗口形状为: $k_h \times \ k_w$ 输出的形状为: 
 
@@ -539,23 +539,262 @@ True
 
 池化层对每次输入的一个**固定形状窗口**的元素计算输出,  池化层直接计算池化窗口的最大值或者平均值.  运算称为:最大池化或者平均池化, 在二维最大池化中, 池化窗口从输入数组的最左上方开始, 按照 **从左往右, 从上往下的顺序** 依次在输入数组上滑动, 当池化窗口滑动到某一位置时, 窗口输入子数组的最大值即为输出数组中相应位置上的元素. 
 
+![1565014467101](./image/1565014467101.png)
+
+
+$$
+max(0,1,3,4) = 4, \\
+max(1,2,4,5) = 5, \\
+max(3,4,6,7) = 7, \\
+max(4,5,6,7) = 8.
+$$
 
 
 
+**代码实现:**
+
+```
+def pool2d(X, poolSize, model='max'):
+    pH, pW = poolSize
+    Y = nd.zeros((X.shape[0] - pH + 1, X.shape[1] - pW + 1))
+    for i in range(Y.shape[0]):
+        for j in range(Y.shape[1]):
+            if model == 'max':
+                Y[i, j] = X[i: i + pH, j: j + pW].max()
+            elif model == 'avg':
+                Y[i, j] = X[i: i + pH, j: j + pW].mean()
+
+    return Y
+    
+if __name__ == '__main__':
+    X = nd.array([[0, 1, 2], [3, 4, 5], [6, 7, 8]])
+    Y = pool2d(X, (2, 2))
+    print(Y)
+
+    Y = pool2d(X, (2, 2), 'avg')
+    print(Y)    
+```
+
+**输出:**
+
+```
+[[ 4.  5.]
+ [ 7.  8.]]
+<NDArray 2x2 @cpu(0)>
+
+[[ 2.  3.]
+ [ 5.  6.]]
+<NDArray 2x2 @cpu(0)>
+```
 
 
 
 ### 4.2 填充和步幅
 
+同卷积层一样, 池化层也可以在输入的高和宽两侧的填充, 并调用窗口的移动步幅来改变输出形状.  池化层填充和步幅与卷积层填充和步幅的工作机制一样. 
+
+
+
+```
+
+if __name__ == '__main__':
+     X = nd.arange(16).reshape((1, 1, 4, 4))
+     pool2d = nn.MaxPool2D(3)
+     Y = pool2d(X)
+     print(Y)
+     pool2d = nn.MaxPool2D(3, padding=1, strides=2)
+     Y = pool2d(X)
+     print(Y)
+```
+
+输出:
+
+```
+[[[[ 10.]]]]
+<NDArray 1x1x1x1 @cpu(0)>
+
+[[[[  5.   7.]
+   [ 13.  15.]]]]
+<NDArray 1x1x2x2 @cpu(0)>
+```
+
 
 
 ### 4.3 多通道
+
+在处理多通道数据时, **池化层对每个输入通道分别池化**, 而不是像卷积层那样将各个通道的输入按通道相加,   
+
+所以输出通道数与输入通道数相等. 
+
+
+
+下面将数组X和X+1在通道维上连接构造通道数为2的输入:
+
+```
+if __name__ == '__main__':
+     X = nd.arange(16).reshape((1, 1, 4, 4))
+     X = nd.concat(X, X + 1, dim=1)
+     pool2d = nn.MaxPool2D(3, padding=1, strides=2)
+     Y =  pool2d(X)
+     print(Y)
+```
+
+输出:
+
+```
+
+[[[[  5.   7.]
+   [ 13.  15.]]
+
+  [[  6.   8.]
+   [ 14.  16.]]]]
+<NDArray 1x2x2x2 @cpu(0)>
+```
+
+池化后输出通道数任然是2
 
 
 
 ## 5. 卷积神经网络(LeNet)
 
+在多层感知机中, 构造了一个含有隐藏层的多层感知机模型来对 Fashion-MNIST 数据集进行分类. 每张图形高和宽均为28像素. 将像素逐行展开, 得到长度为784的向量, 输入进全连接层中, 然而,  这种分类方式有一定的局限性: 
+
+1. 图形在同一列邻近的像素在这个向量中可能距离比较远.  它们的模式可能难以被模型识别 
+2. 对于大尺寸输入图像, 使用全连接层容易导致模型过大.  
+
+卷积层可以解决这两个问题,  
+
++ 卷积层保留输入形状, 使图像的橡树在高和宽两个方向上的相关性均可被有效的识别, 
+
++ 卷积层通过滑动窗口将同一卷积核与不同位置的输入重复机损, 从而避免参数尺寸过大. 
+
+### 5.1 LeNet 模型
+
+
+
+LeNet模型分为卷积层块和全连接层块两个部分. 
+
+**卷积层块:**
+
+卷积层块的基本单位是卷积层后最大池化层. 
+
+卷积层用来识别图像里的空间模式,  例如 线条和物体局部, 之后的最大池化层则用来降低卷积层对位置的敏感性. 
+
+
+
+```python
+ # 使用Sequential实现LeNet模型
+def LeNet():
+    import time
+    net = nn.Sequential()
+    net.add(
+        nn.Conv2D(channels=6, kernel_size=5, activation='sigmoid'),
+        nn.MaxPool2D(pool_size=2, strides=2),
+        nn.Conv2D(channels=16, kernel_size=5, activation='sigmoid'),
+        # Dense 会默认将(批量大小, 通道, 高, 宽) 形状转换成 (批量大小, 通道 * 高 * 宽)的形状输入
+        nn.MaxPool2D(pool_size=2, strides=2),
+        nn.Dense(120, activation='sigmoid'),
+        nn.Dense(84, activation='sigmoid'),
+        nn.Dense(10)
+    )
+
+    X = nd.random.uniform(shape=(1, 1, 28, 28))
+    net.initialize()
+    for layer in net:
+        X = layer(X)
+        print(layer.name, "output shape:\t", X.shape)
+
+```
+
+**输出:**
+
+```
+conv0 output shape:	 (1, 6, 24, 24)
+pool0 output shape:	 (1, 6, 12, 12)
+conv1 output shape:	 (1, 16, 8, 8)
+pool1 output shape:	 (1, 16, 4, 4)
+dense0 output shape:	 (1, 120)
+dense1 output shape:	 (1, 84)
+dense2 output shape:	 (1, 10)
+```
+
+
+
+可以看出, 在卷积层块中输入的高和宽在逐层减小,  卷积层由于使用高和宽均为5的卷积核, 从而将宽和高分别减小了4, 而池化层则将宽和高减半, 但通道数从1 增加到16, 全连接层则逐层减小输出格式,直到变成图像的类别数10 .
+
+### 5.2获取数据和训练模型
+
+使用Fashion-MNIST数据作为训练集
+
+
+
+
+
+
+
 ## 6. 深度卷积神经网络(AlexNet)
+
+LeNet 提出后的20年里, 神经网络一直被其他的机器学习方法超越, 例如支持向量机. 虽然LeNet在早期的小数据集上取得了较好的成绩, 但是在更大的真实数据集上的表现并不如人意. 
+
+1. 训练一个多通道,多层和有大量参数的卷积神经网络,在当年很难完成 
+2. 当年研究者每月大量深入的研究**参数初始化**和**非凸优化算法**等诸多领域, 导致复制的神经网络的训练通常较困难
+
+
+
+神经网络可以直接记忆图像的原始像素进行分类,这种称为**端到端(end-to-end)**的方法节省了很多中间步骤. 
+
+
+
+然而更加流行的是是通过设生成手工特征, 这种方式的流程是:
+
+1. 获取图像数据集
+2. 使用已有的特征提取函数生成图像的特征
+3. 使用机器学习模型对图像的特征分类.
+
+计算机视觉流程中真正重要的是数据和特征, 使用较为干净的数据集合较为有效的特征甚至比机器学习模型的选择对图像分类的结果的影响更大. 
+
+
+
+### 6.1 学习特征表示
+
+**特征如何表示 ?** 
+
+在很长的时间里, 特征都是基于各式各样手工设计的函数从数据中提取的, 不少的研究者通过提出新的特征提取函数不断的改进图像分类的结果. 
+
+另一些研究者认为, 特征本身也应该由学习得来, 为了表征足够复杂的输入, 特征本身应该分级表示. 这些研究者相信, 多层神经网络可以学得数据的多级表征, 并逐级表示越来越多抽象的概念或者模式. 
+
+在物体边缘的检测例子中:
+
+1. 图像的第一级表示可以是特定位置和角度是否出现边缘
+2. 第二级的表示能够将这些边缘组合出有趣的模式. 例如花纹. 
+3. 在第三级的表示中 上一级的花纹能进一步汇合成对物体特定部位的模式
+
+这样逐级表示下去, 最终模型能够根据最后一级的表示完成分类任务. 输入的逐级表示有多层模型中的参数决定, 而这些参数都是学出来的.
+
+
+
+学习视觉数据的逐级表征,很长的一段时间里都未能实现. 其中的原因是:
+
+1. 缺失数据. 早期的数据集只有几千张图像, 在后来诞生的ImageNet数据中包含了1000大类物体, 没类物体多达数千张不同的图像,. 
+2. 缺失硬件. 深度学习对计算资源要求很高, 早期的硬件计算能力有限, 很难训练复制的神经网络, 通用的GPU的到来改变了这一格局.   
+
+### 6.2 AlexNet 
+
+2012年AlexNet使用了8层卷积神经网络,并以很大的优势赢得了ImageNet2012图像识别挑战赛. 首次证明了学习到的特征可以超越手工设计的特征. 
+
+
+
+
+
+
+
+### 6.3 读取数据
+
+### 6.4 训练
+
+
+
+
 
 ## 7 . 使用重复元素的网络(VGG)
 
