--- a/_posts/Go/2019-12-27-channel.md
+++ b/_posts/Go/2019-12-27-channel.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 平均负载
+title: channel
 toc: true
 cover: /img/cover/9ee6c1c5d88b0468af1a3280865a6b7a.png
-tags: ['linux']
-category: Linux
+tags: ['GO']
+category: GO
 ---
 
 # channel
