--- a/_posts/Go/2021-03-08-数组与slice.md
+++ b/_posts/Go/2021-03-08-数组与slice.md
@@ -1,5 +1,5 @@
 ---
-layout: post title: channel toc: true cover: /img/cover/9ee6c1c5d88b0468af1a3280865a6b7a.png tags: ['GO']
+layout: post title: 数组与slice toc: true cover: /img/cover/9ee6c1c5d88b0468af1a3280865a6b7a.png tags: ['GO']
 category: GO
 ---
 
