--- a/_posts/Go/2019-12-27-channel.md
+++ b/_posts/Go/2019-12-27-channel.md
@@ -1,6 +1,10 @@
 ---
-layout: post title: channel toc: true cover: /img/cover/9ee6c1c5d88b0468af1a3280865a6b7a.png tags: ['GO']
-category: GO
+layout: post 
+title: channel
+toc: true
+cover: /img/cover/9ee6c1c5d88b0468af1a3280865a6b7a.png
+tags: ['GO']
+category: golang
 ---
 
 # channel
